force-app/main/default/objects/HFS_Action__c/HFS_Action__c.object-meta.xml
<CustomObject>
    <description>Approved outreach or operational action and its execution state.</description>
    <label>Action</label>
    <nameField>
        <displayFormat>ACT-{000000}</displayFormat>
        <label>Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>