force-app/main/default/objects/HFS_Action__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Approval</label>
    <referenceTo>HFS_Approval__c</referenceTo>
    <relationshipLabel>Actions by Approval</relationshipLabel>
    <relationshipName>HFS_Action_Approval</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>