force-app/main/default/objects/HFS_Action__c/fields/Failure_Detail__c.field-meta.xml
<CustomField>
    <fullName>Failure_Detail__c</fullName>
    <label>Failure Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>