force-app/main/default/objects/HFS_Action__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>QUEUED</fullName>
                <label>Queued</label>
            </value>
            <value>
                <fullName>EXECUTED</fullName>
                <label>Executed</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>