force-app/main/default/objects/HFS_Action__c/fields/Target_Entity__c.field-meta.xml
<CustomField>
    <fullName>Target_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target Entity</label>
    <referenceTo>HFS_Entity__c</referenceTo>
    <relationshipLabel>Actions by Target Entity</relationshipLabel>
    <relationshipName>HFS_Action_Target_Entity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>