force-app/main/default/objects/HFS_Action__c/validationRules/Approval_Must_Be_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Must_Be_Approved</fullName>
    <active>true</active>
    <description>An action requires an approved approval record.</description>
    <errorConditionFormula>NOT(ISPICKVAL(Approval__r.Status__c, "APPROVED"))</errorConditionFormula>
    <errorMessage>An action requires an approved approval record.</errorMessage>
</ValidationRule>