force-app/main/default/objects/HFS_Action__c/validationRules/Execution_After_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Execution_After_Request</fullName>
    <active>true</active>
    <description>Executed At cannot be earlier than Requested At.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Executed_At__c)), Executed_At__c &lt; Requested_At__c)</errorConditionFormula>
    <errorMessage>Executed At cannot be earlier than Requested At.</errorMessage>
</ValidationRule>